--- a/src/components/CardDisplay.css
+++ b/src/components/CardDisplay.css
@@ -17,6 +17,7 @@
   -moz-user-select: none;
   -o-user-select: none;
   user-select: none;
+  touch-action: pan-x;
 }
 
 .card-image-container {
